# DiscoLight

./: .gitignore  CMakeLists.txt  west.yml
app/: CMakeLists.txt  debug.conf  prj.conf  sample.yaml
app/boards/: esp32s3_devkitc.overlay  nucleo_f446ze.overlay
app/src/: CMakeLists.txt  Constants.hpp  main.cpp
app/src/ADC/: AdcReader.hpp  CMakeLists.txt
app/src/Animations/: AnimationControl.hpp  BeatFlash.hpp  BeatPulse.hpp  BeatRipples.hpp  CMakeLists.txt  CometChase.hpp  IAnimation.hpp  LarsonScanner.hpp  RainbowWeel.hpp  RainbowWheel.hpp  SegmentChase.hpp  SolarCorona.hpp  TwinWaveInterference.hpp
app/src/App/: Application.cpp  Application.hpp  CMakeLists.txt
app/src/Core/: CMakeLists.txt  EventBus.hpp  EventTypes.hpp  MessagePublisher.hpp  MessageSubscriber.hpp  ThreadWorker.hpp  Topic.hpp
app/src/Modules/: AudioProcessingModule.hpp  AudioSamplingModule.hpp  CMakeLists.txt  InputModule.hpp  ModuleBase.hpp  ModuleState.hpp  VisualizationModule.hpp
app/src/SignalProcessing/: BeatDetector.hpp  BeatDetectorV2.hpp  CMakeLists.txt  FftProcessor.hpp  LevelPeakDetector.hpp  LpFilter.hpp  SignalProcessingBase.hpp
app/src/Threads/: AudioProcessing.hpp  AudioSampling.hpp  ButtonInputThread.hpp  CMakeLists.txt  IWorker.hpp  SubscriberBase.hpp  SubscriberThread.hpp  ThreadWorker.hpp  VisualizationThread.hpp
app/src/Utils/: Button.hpp  CMakeLists.txt  Detail.hpp  LedUtils.hpp  LoadSwitch.hpp  Logger.cpp  Logger.hpp  MonotonicClock.hpp  PeriodicTimer.hpp  TimeStamp.hpp
app/src/Visualization/: CMakeLists.txt  LedControl.hpp  LedStripController.hpp
(+12 files in other folders)
